--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,12 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://XXXaBg3619.github.io/lab5",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^0.26.0",
@@ -17,6 +19,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
