--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
-  "name": "midterm-website",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "doraeric",
-  "license": "MIT",
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
+  "homepage": "https://XXXaBg3619.github.io/lab5",
   "scripts": {
-    "start": "cd backend && yarn start",
-    "build": "cd frontend && yarn build",
-    "heroku-prebuild": "npm install -g yarn && cd frontend && yarn install --production=false && cd ../backend && yarn"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
+  },
+  "dependencies": {
+    "axios": "^0.26.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
+    "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.2",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23",
+    "vite": "^2.8.0"
   }
 }
